hphp/test/slow/await_as_an_expression/error/binop9.php.expectf

Fatal error: `await` cannot be used as an expression in this location because it's conditionally executed. in %s/binop9.php on line 10
